trying to fix call to action overflow

--- a/scoots/styles/scoots-base.css
+++ b/scoots/styles/scoots-base.css
@@ -115,6 +115,7 @@ main {
 
 /* Style for Hero Call to Action */
 .hero-call-to-action {
+    height: auto;
     min-width: 60%;
     max-width: 60%;
     text-align: left;
